Put UI behind authentiation module Uses same logic as lucos_notes Fixes #58

--- a/src/views/index.mustache
+++ b/src/views/index.mustache
@@ -4,9 +4,9 @@
 	<head> 
 	<title>LucOs Media Player</title>
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width" />
-	<link href="/v3.css" rel="stylesheet">
-	<link rel="icon" type="image/jpg" href="/logo.jpg" />
-	<link rel="manifest" href="/manifest.json" />
+	<link href="/v3.css" rel="stylesheet" crossorigin="use-credentials">
+	<link rel="icon" type="image/jpg" href="/logo.jpg" crossorigin="use-credentials" />
+	<link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
 	<script type="text/javascript">
 		const clientVariables = {{{clientVariables}}};
 	</script>
